# llm-from-scratch

./: .gitignore  README.md  batched_multiplication.py  dummy_gpt_use.py  main.py  pyproject.toml  pytorch_batched_matmul_guide.md  temperature_use.md  test_text_generation.py  test_transformer_import.py
attention/: causal_attention.py  multi_head_attention_wrapper.py  positional_embedding.md  self_attention.py  self_attention_explained.md  simple_attention.py
docs/: adam_optimizers.md  adam_w_notes.md  gpt_output.md  input_output_dimensions.md  llm-optimization-insights.md  notes_pytorch_differentiability.md  output_projection.md  python_project_best_practices.md  self_attention_explained.md  self_attention_weights.md  temperature_use.md  trainable_weight_matrices.md
gpt_architecture/: dummy_gpt_model.py  feed_forward.py  ffn_importance.md  gelu.py  transformer.py
src/llm_from_scratch/attention/: multi_head_attention.py  simple_attention.py  simple_causal_attention.py
tests/: conftest.py  dummy_gpt_use.py  loss_calculation.py  test_build_spam_dataset.py  test_classification.py  test_download_pretrained.py  test_dummy_gpt_use.py  test_embeddings.py  test_loss_calculation.py  test_spam_dataloader.py  test_text_generation.py  test_text_splitting.py  test_training.py  test_transformer_import.py  text_splitting.py
tests/data/: instruction-data.json
tokenizer/: gpt_dataset.py  sampling.py  self_attention.py  simple_causal_attention.py  test_embeddings.py  text_splitting.py  trainable_attention.py  trainable_weight_matrices.md
(+14 files in other folders)
