[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.3.2",
  "tiktoken>=0.11.0",
  "torch==2.4.0",
  "tensorflow>=2.15.0",
  "tqdm>=4.66",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_from_scratch"]

[dependency-groups]
dev = [
  "ipython>=9.4.0",
  "matplotlib>=3.10.6",
  "matplotlib-backend-kitty>=2.1.2",
  "pytest>=8.4.1",
  "ruff>=0.5.5",
  "hatch>=1.11.1",
]
